# sentinel-project

./: .gitignore  DockerFile  Dockerfile
api-service/: DockerFile  go.mod  main.go  start.sh
frontend-react/: package-lock.json  package.json  vite.config.js
frontend-react/src/: App.jsx  index.css
scanner-worker/: Cargo.toml
scanner-worker/src/: main.rs
