[package]
name = "scanner-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime Async (Wajib buat tokio::main dan sleep)
tokio = { version = "1.49", features = ["full"] }

# Database Postgres (Wajib buat konek ke Neon)
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }

# Environment Variables (Buat baca .env)
dotenvy = "0.15.7"

# HTTP Client (Buat nembak API Google Safe Browsing)
# PENTING: fitur "json" harus aktif biar bisa kirim/terima struct
reqwest = { version = "0.12", features = ["json", "blocking"] }

# JSON Parsing (Wajib buat bikin struct ThreatEntry, ThreatInfo, dll)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.8"
